versions/3.4.0/docs/MediaRootPermissionPartialUpdate.md
# MediaRootPermissionPartialUpdate

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**user** | [**ElementsUserMiniReference**](ElementsUserMiniReference.md) |  | [optional] 
**group** | [**ElementsGroupReference**](ElementsGroupReference.md) |  | [optional] 
**path** | **String** |  | [optional] 
**allowCreate** | **Bool** |  | [optional] 
**allowWriteFs** | **Bool** |  | [optional] 
**allowWriteDb** | **Bool** |  | [optional] 
**allowProxyDownload** | **Bool** |  | [optional] 
**allowOriginalDownload** | **Bool** |  | [optional] 
**allowUpload** | **Bool** |  | [optional] 
**allowSharing** | **Bool** |  | [optional] 
**allowDeleteFs** | **Bool** |  | [optional] 
**allowDeleteDb** | **Bool** |  | [optional] 
**showTags** | **Bool** |  | [optional] 
**showComments** | **Bool** |  | [optional] 
**showLocations** | **Bool** |  | [optional] 
**showCustomFields** | **Bool** |  | [optional] 
**showRatings** | **Bool** |  | [optional] 
**showSubclips** | **Bool** |  | [optional] 
**showAiMetadata** | **Bool** |  | [optional] 
**showMarkers** | **Bool** |  | [optional] 
**showHistory** | **Bool** |  | [optional] 
**root** | **Int** |  | [optional] 
**isTemporaryForToken** | **Int** |  | [optional] 

[[Back to Model list]](../#documentation-for-models) [[Back to API list]](../#documentation-for-api-endpoints) [[Back to README]](../)


